# skill-inspector

./: .gitignore  README.md  pyproject.toml  report.md  skill-inspector
docs/: v0.1.0.md  v0.1.5.md  v0.2.0.md  v0.4.1.md  v0.4.2.md
src/skill_inspector/: __init__.py  archetypes.py  cli.py  duplicates.py  health_scoring.py  hermes.py  llm.py  models.py  package_classifier.py  package_duplicates.py  package_report.py  recommendations.py  report.py  risk_analysis.py  usage_analysis.py
