[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-inspector"
version = "0.1.0"
description = "Audit Hermes skill libraries and report what agents are learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skill-inspector = "skill_inspector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
