[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-inspector"
version = "0.4.2"
description = "Governance for Hermes Skills."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0"]
authors = [{name = "johnsonbuilds"}]
license = {text = "Apache License 2.0"}
[project.urls]
Homepage = "https://hermesagentcloud.com/skill-inspector"

[project.scripts]
skill-inspector = "skill_inspector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
